--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=@vagaspcd-ui/docs && changeset publish"
   },
   "license": "MIT",
   "devDependencies": {
+    "@changesets/cli": "2.26.1",
     "turbo": "^1.8.8"
   }
 }
