--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,6 +2,7 @@
   "name": "@vagaspcd-ui/eslint-config",
   "license": "MIT",
   "private": true,
+  "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
