--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Build app
         run: npm run build
+        env:
+          TURBO_TOKEN: nnBLHtQdHc3nyus7mEWn33y0
+          TURBO_TEAM: milena-rosa
 
       - name: Deploy storybook
         working-directory: "./packages/docs"
