--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build app
         run: npm run build
         env:
-          TURBO_TOKEN: nnBLHtQdHc3nyus7mEWn33y0
+          TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           TURBO_TEAM: milena-rosa
 
       - name: Deploy storybook
