--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vagaspcd-ui/react",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -29,6 +29,7 @@
     "@radix-ui/react-radio-group": "1.1.2",
     "@radix-ui/react-select": "1.2.1",
     "@radix-ui/react-tabs": "1.0.3",
-    "@stitches/react": "^1.2.8"
+    "@stitches/react": "^1.2.8",
+    "react-imask": "6.6.0-alpha.0"
   }
 }
